kube/nbank-chart/templates/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
      annotations:
        co.elastic.logs/enabled: "true"                     # включаем сбор логов
        co.elastic.logs/module: springboot                  # опционально, укажем тип логов (лучше парсинг)
        co.elastic.logs/json.keys_under_root: "true"        # если ты логируешь в JSON (например, logstash encoder)
        co.elastic.logs/json.add_error_key: "true"          # добавлять ошибки как поля
    spec:
      containers:
        - name: backend
          image: nobugsme/nbank:with_validation_fix
          imagePullPolicy: Always  # ← вот это важно
          ports:
            - containerPort: 4111
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app: backend  # важно: добавлен label, чтобы ServiceMonitor мог найти этот сервис
spec:
  selector:
    app: backend
  ports:
    - name: http               # ✅ добавлено имя порта
      protocol: TCP
      port: 4111
      targetPort: 4111
  type: NodePort
